// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab /> snapshot Badge children should match snapshot 1`] = `
<Tab>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Badge
            key="1"
          >
            <Badge
              className=""
              type="dot"
            >
              <mdc-badge
                class=""
                suppressHydrationWarning={true}
              />
            </Badge>
          </Badge>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Badge children should match snapshot with active 1`] = `
<Tab
  active={false}
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Badge
            key="5"
          >
            <Badge
              className=""
              type="dot"
            >
              <mdc-badge
                class=""
                suppressHydrationWarning={true}
              />
            </Badge>
          </Badge>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Badge children should match snapshot with className 1`] = `
<Tab
  className="example-class"
>
  <ButtonSimple
    className="md-tab-wrapper example-class"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper example-class md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Badge
            key="2"
          >
            <Badge
              className=""
              type="dot"
            >
              <mdc-badge
                class=""
                suppressHydrationWarning={true}
              />
            </Badge>
          </Badge>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Badge children should match snapshot with disabled 1`] = `
<Tab
  disabled={false}
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
    isDisabled={false}
  >
    <FocusRing
      disabled={false}
    >
      <FocusRing
        disabled={false}
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Badge
            key="6"
          >
            <Badge
              className=""
              type="dot"
            >
              <mdc-badge
                class=""
                suppressHydrationWarning={true}
              />
            </Badge>
          </Badge>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Badge children should match snapshot with id 1`] = `
<Tab
  id="example-id"
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
    id="example-id"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Badge
            key="3"
          >
            <Badge
              className=""
              type="dot"
            >
              <mdc-badge
                class=""
                suppressHydrationWarning={true}
              />
            </Badge>
          </Badge>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Badge children should match snapshot with style 1`] = `
<Tab
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "color": "pink",
            }
          }
          type="button"
        >
          <Badge
            key="4"
          >
            <Badge
              className=""
              type="dot"
            >
              <mdc-badge
                class=""
                suppressHydrationWarning={true}
              />
            </Badge>
          </Badge>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Icon children should match snapshot 1`] = `
<Tab>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Mrv2Icon
            key="0"
            name="plus"
            scale={12}
            weight="bold"
          >
            <Icon
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              data-autoscale={false}
              data-scale={12}
              data-test="plus"
              name="plus-bold"
              style={Object {}}
            >
              <mdc-icon
                class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                data-autoscale={false}
                data-scale={12}
                data-test="plus"
                style={Object {}}
                suppressHydrationWarning={true}
              />
            </Icon>
          </Mrv2Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Icon children should match snapshot with active 1`] = `
<Tab
  active={false}
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Mrv2Icon
            key="4"
            name="plus"
            scale={12}
            weight="bold"
          >
            <Icon
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              data-autoscale={false}
              data-scale={12}
              data-test="plus"
              name="plus-bold"
              style={Object {}}
            >
              <mdc-icon
                class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                data-autoscale={false}
                data-scale={12}
                data-test="plus"
                style={Object {}}
                suppressHydrationWarning={true}
              />
            </Icon>
          </Mrv2Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Icon children should match snapshot with className 1`] = `
<Tab
  className="example-class"
>
  <ButtonSimple
    className="md-tab-wrapper example-class"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper example-class md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Mrv2Icon
            key="1"
            name="plus"
            scale={12}
            weight="bold"
          >
            <Icon
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              data-autoscale={false}
              data-scale={12}
              data-test="plus"
              name="plus-bold"
              style={Object {}}
            >
              <mdc-icon
                class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                data-autoscale={false}
                data-scale={12}
                data-test="plus"
                style={Object {}}
                suppressHydrationWarning={true}
              />
            </Icon>
          </Mrv2Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Icon children should match snapshot with disabled 1`] = `
<Tab
  disabled={false}
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
    isDisabled={false}
  >
    <FocusRing
      disabled={false}
    >
      <FocusRing
        disabled={false}
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Mrv2Icon
            key="5"
            name="plus"
            scale={12}
            weight="bold"
          >
            <Icon
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              data-autoscale={false}
              data-scale={12}
              data-test="plus"
              name="plus-bold"
              style={Object {}}
            >
              <mdc-icon
                class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                data-autoscale={false}
                data-scale={12}
                data-test="plus"
                style={Object {}}
                suppressHydrationWarning={true}
              />
            </Icon>
          </Mrv2Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Icon children should match snapshot with id 1`] = `
<Tab
  id="example-id"
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
    id="example-id"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Mrv2Icon
            key="2"
            name="plus"
            scale={12}
            weight="bold"
          >
            <Icon
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              data-autoscale={false}
              data-scale={12}
              data-test="plus"
              name="plus-bold"
              style={Object {}}
            >
              <mdc-icon
                class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                data-autoscale={false}
                data-scale={12}
                data-test="plus"
                style={Object {}}
                suppressHydrationWarning={true}
              />
            </Icon>
          </Mrv2Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Icon children should match snapshot with shallowDisabled 1`] = `
<Tab
  shallowDisabled={true}
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={true}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Mrv2Icon
            key="5"
            name="plus"
            scale={12}
            weight="bold"
          >
            <Icon
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              data-autoscale={false}
              data-scale={12}
              data-test="plus"
              name="plus-bold"
              style={Object {}}
            >
              <mdc-icon
                class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                data-autoscale={false}
                data-scale={12}
                data-test="plus"
                style={Object {}}
                suppressHydrationWarning={true}
              />
            </Icon>
          </Mrv2Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Icon children should match snapshot with style 1`] = `
<Tab
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "color": "pink",
            }
          }
          type="button"
        >
          <Mrv2Icon
            key="3"
            name="plus"
            scale={12}
            weight="bold"
          >
            <Icon
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              data-autoscale={false}
              data-scale={12}
              data-test="plus"
              name="plus-bold"
              style={Object {}}
            >
              <mdc-icon
                class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                data-autoscale={false}
                data-scale={12}
                data-test="plus"
                style={Object {}}
                suppressHydrationWarning={true}
              />
            </Icon>
          </Mrv2Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Text children should match snapshot 1`] = `
<Tab>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Text
            key="1"
            tagName="h3"
            type="subheader-secondary"
          >
            <Text
              className="md-text-wrapper"
              tagname="h3"
              type="body-midsize-medium"
            >
              <mdc-text
                class="md-text-wrapper"
                suppressHydrationWarning={true}
              >
                Example Text
              </mdc-text>
            </Text>
          </Text>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Text children should match snapshot with active 1`] = `
<Tab
  active={false}
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Text
            key="5"
            tagName="h3"
            type="subheader-secondary"
          >
            <Text
              className="md-text-wrapper"
              tagname="h3"
              type="body-midsize-medium"
            >
              <mdc-text
                class="md-text-wrapper"
                suppressHydrationWarning={true}
              >
                Example Text
              </mdc-text>
            </Text>
          </Text>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Text children should match snapshot with className 1`] = `
<Tab
  className="example-class"
>
  <ButtonSimple
    className="md-tab-wrapper example-class"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper example-class md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Text
            key="2"
            tagName="h3"
            type="subheader-secondary"
          >
            <Text
              className="md-text-wrapper"
              tagname="h3"
              type="body-midsize-medium"
            >
              <mdc-text
                class="md-text-wrapper"
                suppressHydrationWarning={true}
              >
                Example Text
              </mdc-text>
            </Text>
          </Text>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Text children should match snapshot with disabled 1`] = `
<Tab
  disabled={false}
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
    isDisabled={false}
  >
    <FocusRing
      disabled={false}
    >
      <FocusRing
        disabled={false}
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Text
            key="6"
            tagName="h3"
            type="subheader-secondary"
          >
            <Text
              className="md-text-wrapper"
              tagname="h3"
              type="body-midsize-medium"
            >
              <mdc-text
                class="md-text-wrapper"
                suppressHydrationWarning={true}
              >
                Example Text
              </mdc-text>
            </Text>
          </Text>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Text children should match snapshot with id 1`] = `
<Tab
  id="example-id"
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
    id="example-id"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Text
            key="3"
            tagName="h3"
            type="subheader-secondary"
          >
            <Text
              className="md-text-wrapper"
              tagname="h3"
              type="body-midsize-medium"
            >
              <mdc-text
                class="md-text-wrapper"
                suppressHydrationWarning={true}
              >
                Example Text
              </mdc-text>
            </Text>
          </Text>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot Text children should match snapshot with style 1`] = `
<Tab
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "color": "pink",
            }
          }
          type="button"
        >
          <Text
            key="4"
            tagName="h3"
            type="subheader-secondary"
          >
            <Text
              className="md-text-wrapper"
              tagname="h3"
              type="body-midsize-medium"
            >
              <mdc-text
                class="md-text-wrapper"
                suppressHydrationWarning={true}
              >
                Example Text
              </mdc-text>
            </Text>
          </Text>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot string children should match snapshot 1`] = `
<Tab>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <PrimitiveConverter
            fontStyle="subheader-secondary"
            tagName="span"
          >
            <Text
              tagName="span"
              type="subheader-secondary"
            >
              <Text
                className="md-text-wrapper"
                tagname="span"
                type="body-midsize-medium"
              >
                <mdc-text
                  class="md-text-wrapper"
                  suppressHydrationWarning={true}
                >
                  Example label
                </mdc-text>
              </Text>
            </Text>
          </PrimitiveConverter>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot string children should match snapshot with active 1`] = `
<Tab
  active={false}
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot string children should match snapshot with className 1`] = `
<Tab
  className="example-class"
>
  <ButtonSimple
    className="md-tab-wrapper example-class"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper example-class md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot string children should match snapshot with disabled 1`] = `
<Tab
  disabled={false}
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
    isDisabled={false}
  >
    <FocusRing
      disabled={false}
    >
      <FocusRing
        disabled={false}
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot string children should match snapshot with id 1`] = `
<Tab
  id="example-id"
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
    id="example-id"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot string children should match snapshot with shallowDisabled 1`] = `
<Tab
  shallowDisabled={true}
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={true}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<Tab /> snapshot string children should match snapshot with style 1`] = `
<Tab
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    data-shallow-disabled={false}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          data-shallow-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "color": "pink",
            }
          }
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;
